[project]
name = "nmaptraceroute"
version = "0.1.0"
description = "Python + nmap Traceroute tool with CSV output and table charts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "rich>=14.0.0",
    "tabulate>=0.9.0",
]
